--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 :root {
+  --white: #ffffff;
+  --light-gray: #f7f7f7;
+  --grey: #eeeeee;
+  --grey-text: #b3b3b3;
 }
 
 * {
@@ -15,7 +19,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
-
   font-size: 1rem;
   line-height: 1.25;
 }
@@ -29,4 +32,56 @@ video {
   max-inline-size: 100%;
   block-size: auto;
   vertical-align: middle;
+  width: 100%;
+  margin-bottom: 25px;
 }
+
+header {
+}
+
+h1 {
+  text-align: center;
+  font-family: DM Serif Display;
+  font-size: 60px;
+  font-weight: 400;
+  margin: 10px 15px;
+}
+
+main {
+  background-color: var(--light-gray);
+}
+
+.container {
+  margin: 0;
+}
+
+.band-card {
+  text-align: center;
+  background-color: var(--white);
+  margin-bottom: 20px;
+}
+
+.band-card-title {
+  font-family: Heebo;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23px;
+  margin: 0 10px 50px;
+}
+
+.special-band-card-title {
+  font-family: DM Serif Display;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.band-card-footer {
+  padding-bottom: 30px;
+}
+
+.band-card-footer-text {
+}
+
+font-family: "DM Serif Display", serif;
+font-family: "Heebo", sans-serif;
